cip-macros/tests/ui/cip_instance_wrong_type_class_id.stderr
error: The field 'class_id' must be of type 'ClassCode'
  --> tests/ui/cip_instance_wrong_type_class_id.rs:17:15
   |
17 |     class_id: u16,
   |               ^^^

error[E0308]: mismatched types
  --> tests/ui/cip_instance_wrong_type_class_id.rs:14:10
   |
14 | #[derive(CipInstance)]
   |          ^^^^^^^^^^^
   |          |
   |          expected `ClassCode`, found `u16`
   |          expected `ClassCode` because of return type
   |
   = note: this error originates in the derive macro `CipInstance` (in Nightly builds, run with -Z macro-backtrace for more info)
